src/test/ui/unboxed-closures/unboxed-closures-fnmut-as-fn.stderr
error[E0277]: expected a `Fn<(isize,)>` closure, found `S`
  --> $DIR/unboxed-closures-fnmut-as-fn.rs:28:21
   |
LL |     let x = call_it(&S, 22);
   |             ------- ^^ expected an `Fn<(isize,)>` closure, found `S`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `Fn<(isize,)>` is not implemented for `S`
note: required by a bound in `call_it`
  --> $DIR/unboxed-closures-fnmut-as-fn.rs:23:14
   |
LL | fn call_it<F:Fn(isize)->isize>(f: &F, x: isize) -> isize {
   |              ^^^^^^^^^^^^^^^^ required by this bound in `call_it`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
